k8s/veritas-ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veritas-ai
spec:
  replicas: 3
  selector:
    matchLabels:
      app: veritas-ai
  template:
    metadata:
      labels:
        app: veritas-ai
    spec:
      containers:
        - name: veritas-ai
          image: nishithp/veritas-ai:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
